--- a/index.html
+++ b/index.html
@@ -26,7 +26,48 @@
     <script src="src/main.js" defer></script>
 
 </head>
-<body>
+<body>  
     
+        <!-- header -->
+        <header>
+            <div>
+            <img src="imgaes/favicon.ico" alt="logo">
+            <h1><a href = "#">Jonggwon</a></h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#work">My work</a></li>
+                    <li><a href="#testimonial">Testimonial</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <!-- main -->
+        <main>
+            <!-- home -->
+            <section id = "home"></section>
+            <!-- about -->
+            <section id = "about"></section>
+            <!-- skill -->
+            <section id = "skills"></section>
+            <!-- work -->
+            <section id = "work"></section>
+            <!-- testimonials -->
+            <section id = "testimonial"></section>
+            <!-- arrow up -->
+            <aside id = "contact"></aside>
+        </main>
+
+
+
+        <!-- footer -->
+        <footer></footer>
+
+
+
 </body>
 </html>
