--- a/index.html
+++ b/index.html
@@ -49,15 +49,71 @@
         <!-- main -->
         <main>
             <!-- home -->
-            <section id = "home"></section>
+            <section id = "home">
+                <img src="imgaes/pexels-simona-kidrič-2607544.jpg" alt="Jonggwon's profile">
+                <h2>Hello I&#39;m Dream Coder, Jonggwon</h2>
+                <p>A Frontend Developer in Chungju</p>
+                <a href="#contact">Contact Me</a>
+            </section>
+
             <!-- about -->
-            <section id = "about"></section>
+            <section id = "about">
+                <h2>About me</h2>
+                <p>I'm a man in a movie
+                    너와 눈 맞출 때
+                    한편의 영화 속 주인공처럼 beautiful
+                    이 순간이 계속되길
+                    I'm a man in a movie
+                    너를 가진 내겐
+                    더 바랄 것 없이
+                    그저 지금이
+                    완벽하게 느껴져
+                    I'm a man in a movie 나를 어필하기
+                </p>
+               <ul>
+                <li>
+                    <i class="fab fa-html5"></i>
+                    <p>HTML</p>
+                    <p>HTML</p>
+                </li>
+                <li>
+                    <i class="fab fa-css3-alt"></i>
+                    <p>CSS</p>
+                    <p></p>
+                </li>
+                <li>
+                    <i class="fab fa-js"></i>
+                    <p>Javascript</p>
+                    <p>Javascript</p>
+                </li>
+               </ul>
+
+               <ul>
+                <li><img src="imgaes/jobs/google.png" alt="google logo">
+                    <div>
+                        <p>Google as software</p>
+                        <p>2019 0ct - Until now</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="imgaes/jobs/samsung.png" alt="samsung logo">
+                    <div>
+                        <p>Samsung as Software Engineer</p>
+                        <p>2014 Spet - 2019 Oct</p>
+                    </div>
+                </li>
+               </ul>
+            </section>
+
             <!-- skill -->
             <section id = "skills"></section>
+
             <!-- work -->
             <section id = "work"></section>
+
             <!-- testimonials -->
             <section id = "testimonial"></section>
+            
             <!-- arrow up -->
             <aside id = "contact"></aside>
         </main>
