--- a/index.html
+++ b/index.html
@@ -106,14 +106,156 @@
             </section>
 
             <!-- skill -->
-            <section id = "skills"></section>
+            <section id = "skills">
+                <h2>My Skills</h2>
+                <p>Skills & Attributes</p>
+                <p>어필 강점 프로그래밍 등등 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, saepe iste. Et maxime nostrum facere exercitationem deserunt? Rerum molestias quaerat, quas omnis, sequi doloribus, unde ducimus dolore commodi culpa repudiandae.</p>
+                <div>
+                    <section>
+                        <h3>Coding Skills</h3>
+                        <ul>
+                            <li>
+                                <div><span>HTML</span><span>98%</span></div>
+                                <div><div style = "width: 98%"></div></div>
+                            </li>
+                            <li>
+                                <li>
+                                    <div><span>CSS</span><span>90%</span></div>
+                                    <div><div style="width: 90%"></div></div>
+                                </li>
+                            </li>
+                            <li>
+                                <li><div><span>Javascript</span><span>90%</span></div>
+                                    <div><div style="width: 90%"></div></div>
+                                </li>
+                            </li>
+                            <li>
+                                <li><div><span>TypeScript</span><span>80%</span></div>
+                                    <div><div style="width: 80%"></div></div>
+                                </li>
+                            </li>
+                            <li>
+                                <li><div><span>React</span><span>79%</span></div>
+                                    <div><div style="width: 79%"></div></div>
+                                </li>
+                            </li>
+                            <li>
+                                <li><div><span>Nodejs</span><span>68%</span></div>
+                                    <div><div style="width: 68%"></div></div>
+                                </li>
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Tools</h3>
+                        <ul>
+                            <li>Visual Studio Code</li>
+                            <li>Atmega Studio</li>
+                            <li>Eclispe</li>
+                            <li>React</li>
+                            <li>Sketch app</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h3>Etc</h3>
+                        <ul>
+                            <li>Git</li>
+                            <li>Scrum Master</li>
+                            <li>Math</li>
+                        </ul>
+                    </section>
+                </div>
+            </section>
 
             <!-- work -->
-            <section id = "work"></section>
+            <section id = "work">
+                <h2>My work</h2>
+                <p>Projects</p>
+                <ul>
+                    <li><button>All <span>8</span></button></li>
+                    <li><button>Front-end <span>3</span></button></li>
+                    <li><button>Back-end<span>3</span></button></li>
+                    <li><button>Mobile<span>3</span></button></li>
+                </ul>
+                <ul>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project1.webp" alt="project1">
+                        <div>
+                            <h3>Project #1</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project2.webp" alt="project1">
+                        <div>
+                            <h3>Project #1</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project3.webp" alt="project3">
+                        <div>
+                            <h3>Project #3</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project4.webp" alt="project4">
+                        <div>
+                            <h3>Project #4</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project5.webp" alt="project5">
+                        <div>
+                            <h3>Project #5</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                      </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project6.webp" alt="project6">
+                        <div>
+                            <h3>Project #6</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project7.webp" alt="project7">
+                        <div>
+                            <h3>Project #7</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">
+                        <img src="imgaes/projects/project8.webp" alt="project8">
+                        <div>
+                            <h3>Project #8</h3>
+                            <p>Clone Coding with HTML, CSS</p>
+                        </div>
+                        </a>
+                    </li>
+                </ul>
+            </section>
 
             <!-- testimonials -->
             <section id = "testimonial"></section>
-            
+
             <!-- arrow up -->
             <aside id = "contact"></aside>
         </main>
