--- a/index.html
+++ b/index.html
@@ -254,7 +254,33 @@
             </section>
 
             <!-- testimonials -->
-            <section id = "testimonial"></section>
+            <section id = "testimonial">
+                <h2>Testimonilas</h2>
+                <p>See what they say about me</p>
+                <ul>
+                    <li>
+                        <img src="imgaes/testimonials/people1.webp" alt="people1">
+                        <div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
+                            <p><a href="#">James Kim</a> Google</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="imgaes/testimonials/people2.webp" alt="people1">
+                        <div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
+                            <p><a href="#">Paul</a> Google</p>
+                        </div>
+                    </li>
+                    <li>
+                        <img src="imgaes/testimonials/people3.webp" alt="people1">
+                        <div>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
+                            <p><a href="#">Anna</a> Google</p>
+                        </div>
+                    </li>
+                </ul>
+            </section>
 
             <!-- arrow up -->
             <aside id = "contact"></aside>
