--- a/index.html
+++ b/index.html
@@ -283,13 +283,33 @@
             </section>
 
             <!-- arrow up -->
-            <aside id = "contact"></aside>
+            <aside id = "contact">
+                <a href="#home" title="back to top">
+                <i class="fas fa-arrow-up"></i></a>
+            </aside>
         </main>
 
 
 
         <!-- footer -->
-        <footer></footer>
+        <footer>
+            <h2>Let&#39;s talk</h2>
+            <p>skys4202@naver.com</p>
+            <ul>
+                <li>
+                    <a href="https://github.com/skys4202" title = "my github link" target="_blank">
+                    <i class="fab fa-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title = "my link link" target="_blank">
+                        <i class="fas fa-link"></i>
+                        </a>
+                </li>
+            </ul>
+            <p>Jonggwon All rights reserved</p>
+
+        </footer>
 
 
 
