--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <main>
             <!-- home -->
             <section id = "home">
-                <img src="imgaes/pexels-simona-kidrič-2607544.jpg" alt="Jonggwon's profile">
-                <h2>Hello I&#39;m Dream Coder, Jonggwon</h2>
-                <p>A Frontend Developer in Chungju</p>
-                <a href="#contact">Contact Me</a>
+                <img class = "home__avatar" src="imgaes/pexels-simona-kidrič-2607544.jpg" alt="Jonggwon's profile">
+                <h2 class = "home__title">Hello<br> I&#39;m <strong class ="home__title--strong">Dream Coder</strong>, Jonggwon</h2>
+                <p class = "home__description">A Frontend Developer in Chungju</p>
+                <a class ="home__contact" href="#contact">Contact Me</a>
             </section>
 
             <!-- about -->
