--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
             </section>
 
             <!-- about -->
-            <section id = "about">
-                <h2>About me</h2>
-                <p>I'm a man in a movie
+            <section id = "about" class = "section">
+                <h2 class = "title">About me</h2>
+                <p class = "description">I'm a man in a movie
                     너와 눈 맞출 때
                     한편의 영화 속 주인공처럼 beautiful
                     이 순간이 계속되길
@@ -106,9 +106,9 @@
             </section>
 
             <!-- skill -->
-            <section id = "skills">
-                <h2>My Skills</h2>
-                <p>Skills & Attributes</p>
+            <section id = "skills"  class = "section">
+                <h2 class = "title">My Skills</h2>
+                <p class = "description">Skills & Attributes</p>
                 <p>어필 강점 프로그래밍 등등 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, saepe iste. Et maxime nostrum facere exercitationem deserunt? Rerum molestias quaerat, quas omnis, sequi doloribus, unde ducimus dolore commodi culpa repudiandae.</p>
                 <div>
                     <section>
@@ -168,9 +168,9 @@
             </section>
 
             <!-- work -->
-            <section id = "work">
-                <h2>My work</h2>
-                <p>Projects</p>
+            <section id = "work"  class = "section">
+                <h2 class = "title">My work</h2>
+                <p class = "description">Projects</p>
                 <ul>
                     <li><button>All <span>8</span></button></li>
                     <li><button>Front-end <span>3</span></button></li>
@@ -254,9 +254,9 @@
             </section>
 
             <!-- testimonials -->
-            <section id = "testimonial">
-                <h2>Testimonilas</h2>
-                <p>See what they say about me</p>
+            <section id = "testimonial"  class = "section">
+                <h2 class = "title">Testimonilas</h2>
+                <p class = "description">See what they say about me</p>
                 <ul>
                     <li>
                         <img src="imgaes/testimonials/people1.webp" alt="people1">
@@ -283,7 +283,7 @@
             </section>
 
             <!-- arrow up -->
-            <aside id = "contact">
+            <aside id = "contact" >
                 <a href="#home" title="back to top">
                 <i class="fas fa-arrow-up"></i></a>
             </aside>
@@ -292,9 +292,9 @@
 
 
         <!-- footer -->
-        <footer>
-            <h2>Let&#39;s talk</h2>
-            <p>skys4202@naver.com</p>
+        <footer  class = "section">
+            <h2 class = "title">Let&#39;s talk</h2>
+            <p class = "description">skys4202@naver.com</p>
             <ul>
                 <li>
                     <a href="https://github.com/skys4202" title = "my github link" target="_blank">
