--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </section>
 
             <!-- about -->
-            <section id = "about" class = "section">
+            <section id = "about" class = "section max-container">
                 <h2 class = "title">About me</h2>
                 <p class = "description">I'm a man in a movie
                     너와 눈 맞출 때
@@ -70,36 +70,36 @@
                     완벽하게 느껴져
                     I'm a man in a movie 나를 어필하기
                 </p>
-               <ul>
-                <li>
-                    <i class="fab fa-html5"></i>
-                    <p>HTML</p>
-                    <p>HTML</p>
+               <ul class = "majors">
+                <li class = "major">
+                    <i class="fab fa-html5 major__icon"></i>
+                    <p class = "major__title">HTML</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem quam quia dignissimos, doloremque, saepe architecto iste error labore quas explicabo ea sunt recusandae voluptatibus accusamus, rerum eveniet eaque. Laboriosam, maiores?</p>
                 </li>
-                <li>
-                    <i class="fab fa-css3-alt"></i>
-                    <p>CSS</p>
-                    <p></p>
+                <li class = "major">
+                    <i class="fab fa-css3-alt major__icon"></i>
+                    <p class = "major__title">CSS</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iste beatae molestias consequuntur nihil. Corrupti ut fuga accusamus magnam ipsa maiores sed totam repellat sapiente recusandae cum, quisquam, nihil pariatur nesciunt!</p>
                 </li>
-                <li>
-                    <i class="fab fa-js"></i>
-                    <p>Javascript</p>
-                    <p>Javascript</p>
+                <li class = "major">
+                    <i class="fab fa-js major__icon"></i>
+                    <p class = "major__title">Javascript</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum qui accusantium excepturi cumque alias sed placeat voluptatem laborum vitae amet quaerat magnam, necessitatibus consequuntur nemo consequatur eaque unde quisquam mollitia?</p>
                 </li>
                </ul>
 
-               <ul>
-                <li><img src="imgaes/jobs/google.png" alt="google logo">
+               <ul class = "jobs">
+                <li class = "job"><img src="imgaes/jobs/google.png" alt="google logo">
                     <div>
-                        <p>Google as software</p>
-                        <p>2019 0ct - Until now</p>
+                        <p class = "job__name">Google as software</p>
+                        <p class = "job__period">2019 0ct - Until now</p>
                     </div>
                 </li>
-                <li>
+                <li class = "job">
                     <img src="imgaes/jobs/samsung.png" alt="samsung logo">
                     <div>
-                        <p>Samsung as Software Engineer</p>
-                        <p>2014 Spet - 2019 Oct</p>
+                        <p class = "job__name">Samsung as Software Engineer</p>
+                        <p class = "job__period">2014 Spet - 2019 Oct</p>
                     </div>
                 </li>
                </ul>
