--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
 
             <!-- skill -->
             <section id = "skills"  class = "section">
+               <div class = "max-container">
                 <h2 class = "title">My Skills</h2>
                 <p class = "description">Skills & Attributes</p>
                 <p>어필 강점 프로그래밍 등등 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, saepe iste. Et maxime nostrum facere exercitationem deserunt? Rerum molestias quaerat, quas omnis, sequi doloribus, unde ducimus dolore commodi culpa repudiandae.</p>
-                <div>
-                    <section>
-                        <h3>Coding Skills</h3>
+                <div class = "skills">
+                    <section class = "skills__coding">
+                        <h3 class = "skills__title">Coding Skills</h3>
                         <ul>
                             <li>
                                 <div><span>HTML</span><span>98%</span></div>
@@ -146,8 +147,8 @@
                             </li>
                         </ul>
                     </section>
-                    <section>
-                        <h3>Tools</h3>
+                    <section class = "skills__tools">
+                        <h3 class = "skills__title">Tools</h3>
                         <ul>
                             <li>Visual Studio Code</li>
                             <li>Atmega Studio</li>
@@ -156,8 +157,8 @@
                             <li>Sketch app</li>
                         </ul>
                     </section>
-                    <section>
-                        <h3>Etc</h3>
+                    <section class = "skills__etc">
+                        <h3 class = "skills__title">Etc</h3>
                         <ul>
                             <li>Git</li>
                             <li>Scrum Master</li>
@@ -165,6 +166,7 @@
                         </ul>
                     </section>
                 </div>
+               </div>
             </section>
 
             <!-- work -->
