--- a/index.html
+++ b/index.html
@@ -175,13 +175,14 @@
 
             <!-- work -->
             <section id = "work"  class = "section">
-                <h2 class = "title">My work</h2>
+                <div class = "max-container">
+                    <h2 class = "title">My work</h2>
                 <p class = "description">Projects</p>
-                <ul>
-                    <li><button>All <span>8</span></button></li>
-                    <li><button>Front-end <span>3</span></button></li>
-                    <li><button>Back-end<span>3</span></button></li>
-                    <li><button>Mobile<span>3</span></button></li>
+                <ul class = "categories">
+                    <li><button class = "category category--selected">All <span class = "category__count">8</span></button></li>
+                    <li><button class = "category">Front-end <span class = "category__count">3</span></button></li>
+                    <li><button class = "category">Back-end<span class = "category__count">3</span></button></li>
+                    <li><button class = "category">Mobile<span class = "category__count">3</span></button></li>
                 </ul>
                 <ul>
                     <li>
@@ -257,6 +258,7 @@
                         </a>
                     </li>
                 </ul>
+                </div>
             </section>
 
             <!-- testimonials -->
