--- a/index.html
+++ b/index.html
@@ -262,29 +262,29 @@
             </section>
 
             <!-- testimonials -->
-            <section id = "testimonial"  class = "section">
+            <section id = "testimonial"  class = "section max-container">
                 <h2 class = "title">Testimonilas</h2>
                 <p class = "description">See what they say about me</p>
-                <ul>
-                    <li>
-                        <img src="imgaes/testimonials/people1.webp" alt="people1">
-                        <div>
+                <ul class = "testimonilas">
+                    <li class = "testimonial">
+                        <img src="imgaes/testimonials/people1.webp" alt="people1" class = "testimonial__img">
+                        <div class = "testimonial__bubble">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
-                            <p><a href="#">James Kim</a> Google</p>
+                            <p><a href="#" class = "testimonial__bubble__name">James Kim</a> Google</p>
                         </div>
                     </li>
-                    <li>
-                        <img src="imgaes/testimonials/people2.webp" alt="people1">
-                        <div>
+                    <li class = "testimonial">
+                        <img src="imgaes/testimonials/people2.webp" alt="people1" class = "testimonial__img">
+                        <div class = "testimonial__bubble">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
-                            <p><a href="#">Paul</a> Google</p>
+                            <p><a href="#" class = "testimonial__bubble__name">Paul</a> Google</p>
                         </div>
                     </li>
-                    <li>
-                        <img src="imgaes/testimonials/people3.webp" alt="people1">
-                        <div>
+                    <li class = "testimonial">
+                        <img src="imgaes/testimonials/people3.webp" alt="people1" class = "testimonial__img">
+                        <div class = "testimonial__bubble">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus molestiae doloremque similique, ratione alias vel impedit temporibus explicabo soluta porro ex eos labore minima odit suscipit necessitatibus quo quisquam qui.</p>
-                            <p><a href="#">Anna</a> Google</p>
+                            <p><a href="#" class = "testimonial__bubble__name">Anna</a> Google</p>
                         </div>
                     </li>
                 </ul>
