--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img class ="header__logo__img"src="imgaes/favicon.ico" alt="logo">
             <h1 class ="header__logo__title"><a href = "#">Jonggwon</a></h1>
             </div>
-            <nav>
+            <nav class = "header__nav">
                 <ul class = "header__menu">
                     <li><a class ="header__menu__item active" href="#home">Home</a></li>
                     <li><a class ="header__menu__item" href="#about">About</a></li>
@@ -291,8 +291,8 @@
             </section>
 
             <!-- arrow up -->
-            <aside id = "contact" >
-                <a href="#home" title="back to top">
+            <aside>
+                <a class = "arrow-up" href="#home" title="back to top">
                 <i class="fas fa-arrow-up"></i></a>
             </aside>
         </main>
@@ -300,23 +300,25 @@
 
 
         <!-- footer -->
-        <footer  class = "section">
+        <footer id = "contact"  class = "section">
+           <div class = "max-container">
             <h2 class = "title">Let&#39;s talk</h2>
             <p class = "description">skys4202@naver.com</p>
-            <ul>
+            <ul class = "contact__links">
                 <li>
-                    <a href="https://github.com/skys4202" title = "my github link" target="_blank">
+                    <a class = "contact__link"  href="https://github.com/skys4202" title = "my github link" target="_blank">
                     <i class="fab fa-github"></i>
                     </a>
                 </li>
                 <li>
-                    <a href="#" title = "my link link" target="_blank">
+                    <a class = "contact__link" href="#" title = "my link link" target="_blank">
                         <i class="fas fa-link"></i>
                         </a>
                 </li>
             </ul>
             <p>Jonggwon All rights reserved</p>
 
+           </div>
         </footer>
 
 
