--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- home -->
             <section id = "home">
                <div class = "home__container">
-                <img class = "home__avatar" src="imgaes/pexels-simona-kidrič-2607544.jpg" alt="Jonggwon's profile">
+                <img class = "home__avatar" src="imgaes/introduce.jpg" alt="Jonggwon's profile">
                 <h2 class = "home__title">Hello<br> I&#39;m <strong class ="home__title--strong">Dream Coder</strong>, Jonggwon</h2>
                 <p class = "home__description">A Frontend Developer in Chungju</p>
                 <a class ="home__contact" href="#contact">Contact Me</a>
@@ -293,7 +293,7 @@
             </section>
 
             <!-- arrow up -->
-            <aside>
+            <aside class = "aside">
                 <a class = "arrow-up" href="#home" title="back to top">
                 <i class="fas fa-arrow-up"></i></a>
             </aside>
