--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <!-- css -->
     <link rel="stylesheet" href="css/style.css">
     <!-- javascript -->
-    <script src="src/main.js" defer></script>
+    <script type = "module" src="src/main.js" defer></script>
+    <script type = "module" src="src/projects.js" defer></script>
 
 </head>
 <body>  
