--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
                     <h2 class = "title">My work</h2>
                 <p class = "description">Projects</p>
                 <ul class = "categories">
-                    <li><button class = "category category--selected">All <span class = "category__count">8</span></button></li>
-                    <li><button class = "category">Front-end <span class = "category__count">3</span></button></li>
-                    <li><button class = "category">Back-end<span class = "category__count">3</span></button></li>
-                    <li><button class = "category">Mobile<span class = "category__count">3</span></button></li>
+                    <li><button class = "category category--selected" data-category="all">All <span class = "category__count">8</span></button></li>
+                    <li><button class = "category" data-category="front-end">Front-end <span class = "category__count">5</span></button></li>
+                    <li><button class = "category" data-category="back-end">Back-end<span class = "category__count">1</span></button></li>
+                    <li><button class = "category" data-category="mobile">Mobile<span class = "category__count">2</span></button></li>
                 </ul>
                 <ul class = "projects">
-                    <li class = "project">
+                    <li class = "project" data-type ="front-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project1.webp" alt="project1" class = "project__img">
                         <div class = "project__metadata">
@@ -200,7 +200,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="front-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project2.webp" alt="project1" class = "project__img">
                         <div class = "project__metadata">
@@ -209,7 +209,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="back-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project3.webp" alt="project3" class = "project__img">
                         <div class = "project__metadata">
@@ -218,7 +218,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="front-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project4.webp" alt="project4" class = "project__img">
                         <div class = "project__metadata">
@@ -227,7 +227,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="mobile">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project5.webp" alt="project5" class = "project__img">
                         <div class = "project__metadata">
@@ -236,7 +236,7 @@
                         </div>
                       </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="front-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project6.webp" alt="project6" class = "project__img">
                         <div class = "project__metadata">
@@ -245,7 +245,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="mobile">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project7.webp" alt="project7" class = "project__img">
                         <div class = "project__metadata">
@@ -254,7 +254,7 @@
                         </div>
                         </a>
                     </li>
-                    <li class = "project">
+                    <li class = "project" data-type ="front-end">
                         <a href="#" target="_blank">
                         <img src="imgaes/projects/project8.webp" alt="project8" class = "project__img">
                         <div class = "project__metadata">
