--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <!-- OG (Open Graph Data) 웹사이트 소개할 때 유용, 검색엔진-->
     <meta property="og:title" content="포트폴리오" />
     <meta property="og:tpye" content="website" />
-    <meta property="og:url" content="배포후 생성된 URL" />
-    <meta property="og:image" content="배포후에 생선된 이미지 URL" />
+    <meta property="og:url" content="https://skys4202.github.io/portpolio/" />
+    <meta property="og:image" content="https://skys4202.github.io/portpolio/imgaes/og.webp"/>
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
