--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
                </ul>
 
                <ul class = "jobs">
-                <li class = "job"><img src="imgaes/jobs/google.png" alt="google logo">
+                <li class = "job"><img src="imgaes/jobs/seowon.png" alt="google logo">
                     <div>
-                        <p class = "job__name">Google as software</p>
-                        <p class = "job__period">2019 0ct - Until now</p>
+                        <p class = "job__name">서원대학교 정보통신공학과</p>
+                        <p class = "job__period">2019 03.01 - 2025.02.05</p>
                     </div>
                 </li>
                 <li class = "job">
-                    <img src="imgaes/jobs/samsung.png" alt="samsung logo">
+                    <img src="imgaes/jobs/seowon.png" alt="samsung logo">
                     <div>
-                        <p class = "job__name">Samsung as Software Engineer</p>
-                        <p class = "job__period">2014 Spet - 2019 Oct</p>
+                        <p class = "job__name">서원대학교 학생 멘토</p>
+                        <p class = "job__period">2023.11.01 - 2023.12.04</p>
                     </div>
                 </li>
                </ul>
@@ -318,8 +318,8 @@
                     </a>
                 </li>
                 <li>
-                    <a class = "contact__link" href="#" title = "my link link" target="_blank">
-                        <i class="fas fa-link"></i>
+                    <a class = "contact__link" href="https://blog.naver.com/PostList.naver?blogId=skys4202&from=postList&categoryNo=15&parentCategoryNo=15" title = "my blog link" target="_blank">
+                        <i class="fab fa-blogger-b"></i>
                         </a>
                 </li>
             </ul>
