--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <script type = "module" src="src/main.js" defer></script>
     <script type = "module" src="src/projects.js" defer></script>
     <script type = "module" src="src/active_menu.js" defer></script>
+    <script type = "module" src="src/type.js" defer></script>
+    <!-- TypeIt -->
+    <script src="https://unpkg.com/typeit@8.7.1/dist/index.umd.js"></script>
 
 </head>
 <body>  
@@ -57,10 +60,11 @@
             <section id = "home">
                <div class = "home__container">
                 <img class = "home__avatar" src="imgaes/introduce.jpg" alt="Jonggwon's profile">
-                <h2 class = "home__title">Hello<br> I&#39;m <strong class ="home__title--strong">Dream Coder</strong>, Jonggwon</h2>
+                <h2 class = "home__title" aria-label="Hello, I'm Dream Coder Jonggwon">Hello<br> I&#39;m <strong class ="home__title--strong">Dream Coder</strong>, Jonggwon</h2>
                 <p class = "home__description">A Frontend Developer in Chungju</p>
                 <a class ="home__contact" href="#contact">Contact Me</a>
                </div>
+            
             </section>
 
             <!-- about -->
@@ -328,6 +332,8 @@
            </div>
         </footer>
 
+
+        
 
 
 </body>
